--- a/scss/_frontpage-category.scss
+++ b/scss/_frontpage-category.scss
@@ -48,7 +48,7 @@
 		
 		ul
 		{
-			display: inline-block;
+			display: inline-block !important;
 			height: auto;
 			margin: 0px;
 			width: 100%;
