--- a/scss/_frontpage.scss
+++ b/scss/_frontpage.scss
@@ -143,7 +143,6 @@
 {
 	align-items: stretch;
 	display: flex;
-	flex-wrap: none;
 }
 
 .frontpage-feature
